--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Birthday! Trithi</title>
+  <title>Happy Birthday! Tithi</title>
   <style>
     body {
       margin: 0;
@@ -112,7 +112,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Happy Birthday! Trithi</h1>
+    <h1>Happy Birthday! Tithi</h1>
     <div class="image-frame">
       <img src="trithi.jpg" alt="Birthday Doodle">
     </div>
